[metadata]
name = odefilter
description = Probabilistic numerical ODE solvers
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    jax[cpu]>=0.3.18  # this is where jax.Array was introduced
python_requires = >=3.8


[options.extras_require]
test =
    pytest
    pytest-xdist
    pytest-randomly
    pytest-cases
    diffeqzoo
    tornadox
lint =
    flake8
    flake8-docstrings
    isort
    black
    nbqa
    jupytext
    pylint
    mypy
example =
    jupyter
    matplotlib
    jupytext
    diffeqzoo
    tueplots
    tqdm
doc =
    mkdocs
    mkdocs-material
    mkdocs-exclude
    mkdocstrings-python
    mkdocstrings
    mknotebooks
    mkdocs-jupyter

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 88
docstring-convention = numpy
ignore =
    # All formatting issues are taken care of by black
    E203
    # Jaxtyping vs flake8
    F722
    # To early to enforce docstrings.
    D101,D102,D103,D105
per-file-ignores =
    # Docstrings are not required in tests
    tests/*:D103
    # Docstrings not required in notebooks, dev docs, etc.
    docs/*:D100,D103

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[black]
include = '\.pyi?$'
exclude = '''
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist'''


[pytest.ini_options]
addopts =
    "--verbose"
    "--doctest-modules"
    "--jaxtyping-packages=odefilter,typeguard.typechecked"
norecursedirs =
    ".*"
    "*.egg*"
    "dist"
    "build"
    ".tox"
testpaths =
    "odefilter"
    "tests"
doctest_optionflags =
    "NUMBER NORMALIZE_WHITESPACE"
filterwarnings =
    error
    ignore:No GPU/TPU found, falling back to CPU.:UserWarning
    ignore:*Finished tracing:UserWarning
