[metadata]
name = probdiffeq
description = Probabilistic numerical ODE solvers
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
cpu =
    jax[cpu]
test =
    pytest
    pytest-xdist
    pytest-cases
    pytest-cov
    diffeqzoo
    diffrax<0.4
lint =
    %(test)s
    pre-commit
format =
    isort
    black
    nbqa
    jupytext
example =
    jupyter
    matplotlib
    jupytext
    diffeqzoo
    tueplots
    tqdm
    optax
    blackjax
doc =
    mkdocs
    mkdocs-material
    mkdocs-exclude
    mkdocstrings-python
    mkdocstrings
    mkdocs-jupyter
full =
    %(cpu)s
    %(test)s
    %(format)s
    %(lint)s
    %(example)s
    %(doc)s

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 88
docstring-convention = numpy
ignore =
    # All formatting issues are taken care of by black
    E203
    # To early to enforce docstrings.
    D101,D102,D103,D105
per-file-ignores =
    # Docstrings are not required in tests
    tests/*:D103
    # Docstrings not required in notebooks, dev docs, etc.
    docs/*:D100,D103

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[black]
include = '\.pyi?$'
exclude = '''
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist'''
